syntax = "proto3";

package clientToAppMgr;

option go_package="github.com/nikhs247/objectDetection/comms/rpc/clientToAppMgr";

    service ApplicationManager {
        rpc QueryTaskList (Query) returns (TaskList);
    }

    message UUID {
        string value = 1;
    }

    message Location {
        double lat = 1;
        double lon = 2;
    }

    message Query {
        UUID clientId = 1;
        Location geoLocation = 2;
        UUID appId = 3;
    }
    
    message Task {
        string ip = 1;
        string port = 2;
    }
    message TaskList {
        repeated Task taskList = 1;
    }